--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "edureach-server",
   "version": "0.1.0",
   "main": "server.js",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
